<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="556dp"
                    android:layout_height="94dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RegisterText"
                    android:layout_width="283dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="clip_horizontal"
                    android:gravity="center"
                    android:text="Sign Up for eCare"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_thin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="center|start"
                    android:hint="Please Enter Your Full Name"
                    android:text="FIRST NAME"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"
                    android:foregroundGravity="clip_horizontal"
                    android:gravity="center_horizontal"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal"
                    android:text="LAST NAME"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="467dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"
                    android:foregroundGravity="clip_horizontal"
                    android:gravity="center|center_horizontal"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="431dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start"
                    android:text="E-MAIL"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phoneNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal"
                    android:text="PHONE NUMBER "
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal"
                    android:text="PASSWORD "
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"

                    android:gravity="center_horizontal"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation='horizontal'>

                    <RadioButton
                        android:id="@+id/employeeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:buttonTint="@android:color/white"
                        android:fontFamily="@font/roboto_thin"

                        android:foregroundGravity="center"
                        android:text="Employee"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/patientButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:buttonTint="@android:color/white"
                        android:fontFamily="@font/roboto_thin"

                        android:foregroundGravity="center"
                        android:text="Patient"
                        android:textColor="@android:color/white" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/RegisterButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_rounded"
                    android:onClick="RegisterBtnClicked"

                    android:text="Register"
                    android:textColor="@android:color/white" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>